---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2025-05-17
  Changes:
    - updated to support Factorio 2.0
    - updated mod description
    - updated mod thumbnail
    - updated license year
  Locale:
    - added Ukrainian (uk) locale from Crowdin
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 01OCT2024
  Changes:
    - re-added main menu simulation integration
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 06JAN2024
  Changes:
    - removed dependency on simhelper
    - removed main menu simulationn integration
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 30SEP2023
  Changes:
    - added compatibility with other mods that use simhelper funccapture for main menu background simulation scripts
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 29SEP2023
  Changes:
    - initial release to the mod portal
  Features:
    - when anything with an inventory is destroyed, the contents of its inventories are spilled on the ground around it
    - when anything with an equipment grid is destroyed, the contents of the grid are spilled on the ground around it
    - when an equipment is spilled on the ground, the contents of its inventory are removed and spilled on the ground around it
    - main menu background simulation integration