@@ -9,7 +9,7 @@
     "description": "Spills the inventory of anything that dies onto the ground around it.",
     "factorio_version": "2.0",
     "dependencies": [
-        "base"
+        "base >= 2.0.51"
     ],
     "package": {
         "readme": "README.md",
